# git-vogue

./: .gitignore  .travis.yml  ChangeLog  HLint.hs  LICENSE  Makefile  README.md  Setup.hs  acceptance-tests  acceptance-tests-2  acceptance-tests.sh  archive.html  changelog.txt  default.nix  git-vogue-docs.cabal  git-vogue.cabal  index.html  release.nix  stack.yaml
css/: default.css
fixtures/: exploding  failing  succeeding
fixtures/bad_repo/src/: Bad.hs
fixtures/plugins/: non-executable  succeeding
git-vogue-docs/: deploy.hs  index.markdown  readme-import.hs  site.hs
git-vogue-docs/templates/: default.html
js/: run.js
lib/Git/: Vogue.hs
lib/Git/Vogue/: Modules.hs  PluginCommon.hs  Plugins.hs  Types.hs
lib/Git/Vogue/PluginDiscoverer/: Libexec.hs
lib/Git/Vogue/VCS/: Git.hs  Null.hs
plugins/: git-vogue-stylish-haskell  stylish-haskell
posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html
src/: Common.hs  git-vogue-cabal.hs  git-vogue-ghc-mod.hs  git-vogue-hlint.hs  git-vogue-packunused.hs  git-vogue-stylish.hs  git-vogue.hs
src/Utilities/: HaskellFiles.hs
templates/: pre-commit
tests/: acceptance-tests  acceptance-tests-2  git-check.hs  git-setup.hs  git-vcs.hs  modules.hs  plugins.hs  unit.hs
