name:               git-vogue-docs
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   git-vogue-docs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.6.*
                  , process
  ghc-options:      -threaded
  default-language: Haskell2010

executable readme-import
  main-is:          readme-import.hs
  hs-source-dirs:   git-vogue-docs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.6.*
                  , MissingH
                  , process
  ghc-options:      -threaded
  default-language: Haskell2010  

executable deploy
  main-is:          deploy.hs
  hs-source-dirs:   git-vogue-docs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.6.*
                  , MissingH
                  , process
                  , shelly
                  , temporary
                  , text
                  , time
                  , transformers
  ghc-options:      -threaded
  default-language: Haskell2010  
