name:                git-vogue
version:             0.2.0.1
synopsis:            A framework for pre-commit checks.
description:         Make your Haskell git repositories fashionable.
homepage:            https://github.com/anchor/git-vogue
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           (c) 2015 Anchor Systems, Pty Ltd and Others
category:            Development
build-type:          Custom
extra-source-files:  README.md, changelog.txt
cabal-version:       >=1.10
data-files:          templates/pre-commit

source-repository HEAD
  type: git
  location: https://github.com/anchor/git-vogue

flag gpl
    default: True
    description: Use GPL libraries, specifically hscolour

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Git.Vogue
                       Git.Vogue.Types
                       Git.Vogue.VCS.Git
                       Git.Vogue.PluginDiscoverer.Libexec
                       Git.Vogue.PluginCommon
  other-modules:       Paths_git_vogue
  build-depends:       base >=4.6 && <5
                     , directory
                     , filepath
                     , process
                     , containers
                     , formatting
                     , split
                     , text
                     , optparse-applicative >= 0.11
                     , transformers
                     , mtl
                     , unix
                       -- To fix depedencies
                     , hlint           >= 1.9.13 && < 1.10
                     , stylish-haskell >= 0.5.11 && < 0.5.12
                     , ghc-mod         >= 5.2    && < 5.3

executable git-vogue
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue.hs
  build-depends:       base
                     , filepath
                     , directory
                     , text
                     , git-vogue
                     , optparse-applicative
                     , split

executable git-vogue-cabal
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-cabal.hs
  build-depends:       base
                     , Cabal
                     , containers
                     , git-vogue
                     , directory
                     , filepath
                     , process

executable git-vogue-hlint
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-hlint.hs
  build-depends:       base
                     , directory
                     , filepath
                     , hlint
                     , cpphs
                     , bifunctors
                     , haskell-src-exts
                     , git-vogue
                     , hscolour
                     , process
  if !flag(gpl)
        cpp-options: -DGPL_SCARES_ME

executable git-vogue-stylish
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-stylish.hs
  build-depends:       base
                     , Diff
                     , directory
                     , filepath
                     , git-vogue
                     , process
                     , strict
                     , stylish-haskell

executable git-vogue-ghc-mod
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-ghc-mod.hs
  build-depends:       base
                     , Diff
                     , directory
                     , containers
                     , filepath
                     , git-vogue
                     , process
                     , strict
                     , ghc-mod

test-suite unit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             unit.hs
  build-depends:       base
                     , directory
                     , filepath
                     , containers
                     , git-vogue
                     , hspec
                     , temporary
                     , process
                     , transformers
                     , unix

-- vim: set tabstop=21 expandtab:
