name:                git-vogue
version:             0.2.2.1
synopsis:            A framework for pre-commit checks.
description:         Make your Haskell git repositories fashionable.
homepage:            https://github.com/christian-marie/git-vogue
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering (defunct)
maintainer:          Christian Marie <christian@ponies.io>, Oswyn Brent <oztastic703@gmail.com>
copyright:           (c) 2017 Christian Marie, Anchor Systems, Pty Ltd and Others
category:            Development
build-type:          Custom
extra-source-files:  README.md, changelog.txt
cabal-version:       >=1.23
data-files:          templates/pre-commit

custom-setup
  setup-depends: base
               , filepath
               , Cabal

source-repository HEAD
  type: git
  location: https://github.com/christian-marie/git-vogue

flag gpl
    default: True
    description: Use GPL libraries, specifically hscolour

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Git.Vogue
                       Git.Vogue.Types
                       Git.Vogue.VCS.Git
                       Git.Vogue.VCS.Null
                       Git.Vogue.PluginDiscoverer.Libexec
                       Git.Vogue.PluginCommon
  other-modules:       Paths_git_vogue
  build-depends:       base >=4.8 && <5
                     , containers
                     , directory
                     , extra >= 1.4 && < 1.6
                     , filepath
                     , formatting
                     , optparse-applicative >= 0.11 && < 0.14
                     , process
                     , split
                     , text
                     , transformers
                     , unix

executable git-vogue
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue.hs
  build-depends:       base
                     , git-vogue
                     , optparse-applicative
                     , text

executable git-vogue-cabal
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-cabal.hs
  build-depends:       base
                     , Cabal
                     , git-vogue

executable git-vogue-hlint
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-hlint.hs
  build-depends:       base
                     , bifunctors
                     , cpphs
                     , directory
                     , git-vogue
                     , haskell-src-exts
                     , hlint           >= 2
                     , hscolour
  if !flag(gpl)
        cpp-options: -DGPL_SCARES_ME

executable git-vogue-packunused
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-packunused.hs
  build-depends:       base
                     , git-vogue
                     , process

executable git-vogue-stylish
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-stylish.hs
  build-depends:       base
                     , Diff
                     , git-vogue
                     , strict
                     , stylish-haskell >= 0.7

Flag ghc-mod
  Description: build ghc-mod plugin
  Default: True

executable git-vogue-ghc-mod
  if flag(ghc-mod)
    build-depends:       base
                       , ghc-mod         >= 5.8
                       , git-vogue
  else
    buildable: False
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             git-vogue-ghc-mod.hs

test-suite unit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             unit.hs
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , git-vogue
                     , hspec
                     , process
                     , temporary
  build-tools:         git
-- vim: set tabstop=21 expandtab:
